<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_admin_renters"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_renters" />
    <item
        android:id="@+id/nav_admin_customers"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_customers" />
    <item
        android:id="@+id/nav_admin_bookings"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_bookings" />
    <item
        android:id="@+id/nav_admin_complaints"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_complaints" />
</menu>
